Создание непонятной конструкции 0.0.7